[tool.poetry]
name = "evals"
version = "1.0.3.post1"
description = "evals: a framework for evaluating LLMs"
authors = []

[tool.poetry.scripts]
oaieval = "evals.cli.oaieval:main"
oaievalset = "evals.cli.oaievalset:main"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
mypy = ">=1.4.1"
openai = ">=0.27.2"
tiktoken = ">=0.4.0"
blobfile = ">=2.0.2"
backoff = ">=2.2.1"
numpy = ">=1.25.1"
pandas = ">=2.0.3"
datasets = ">=2.13.1"
fire = ">=0.5.0"
pydantic = "^1"
tqdm = ">=4.65.0"
nltk = ">=3.8.1"
filelock = ">=3.12.2"
mock = ">=5.1.0"
langdetect = ">=1.0.9"
termcolor = ">=2.3.0"
lz4 = ">=4.3.2"
pyzstd = ">=0.15.9"
pyyaml = ">=6.0"
sacrebleu = ">=2.3.1"
matplotlib = ">=3.7.2"
pytest = ">=7.3.0"
setuptools_scm = ">=7.1.0"
langchain = ">=0.0.233"
types-PyYAML = ">=6.0.12.10"
snowflake-connector-python = {extras = ["pandas"], version = "^3.0.4"}

[tool.poetry.group.dev.dependencies]
black = ">=23.7.0"
isort = ">=5.12.0"
autoflake = ">=2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 